k8s/https.yaml
#@ load("@ytt:data", "data")

#@ wildcard = "*." + data.values.domain
#@ wildcard_array = [ wildcard ]
#@ namespace = "learningcenter"

---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace
  annotations:
    kapp.k14s.io/exists: ""
    kapp.k14s.io/change-group: "portal"
