k8s/networkpolicy.yaml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cidrs
  namespace: tap-gui
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        #@ for cidr in data.values.allowcidrs:
        - ipBlock:
            cidr: #@ cidr
        #@ end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cidrs
  namespace: #@ data.values.hostname + "-ui"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        #@ for cidr in data.values.allowcidrs:
        - ipBlock:
            cidr: #@ cidr
        #@ end
